# recursa

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
docs/plans/: 2026-04-08-recursa-design.md  2026-04-08-recursa-implementation.md  2026-04-08-review.md  2026-04-09-container-types-design.md  2026-04-09-container-types-implementation.md  2026-04-09-firstset-design.md  2026-04-09-firstset-implementation.md  2026-04-09-rules-as-parameter-implementation.md  2026-04-09-seq-review.md  2026-04-09-visitor-design.md  2026-04-09-visitor-implementation.md  2026-04-10-pg-sql-design.md  2026-04-10-pg-sql-phase1-implementation.md  2026-04-13-eliminate-manual-parse-impls.md  2026-04-13-format-tokens-design.md  2026-04-14-benchmark-suite-design.md  2026-04-14-benchmark-suite-plan.md  2026-04-14-non-copying-ast-design.md  2026-04-14-non-copying-ast.md  2026-04-14-recursa-diagram-design.md  2026-04-14-recursa-diagram-plan.md
docs/retrospectives/: 2026-04-14-recursa-diagram.md
pg-sql/: CLAUDE.md  Cargo.toml  README.md
pg-sql/benches/: parse.rs
pg-sql/fixtures/stress/: bool_chain_10.sql  bool_chain_100.sql  bool_chain_1000.sql  in_list_100.sql  in_list_1000.sql  in_list_10000.sql  insert_values_100.sql  insert_values_1000.sql  insert_values_10000.sql  nested_subquery_10.sql  nested_subquery_100.sql  nested_subquery_15.sql  nested_subquery_5.sql  nested_subquery_50.sql  select_list_100.sql  select_list_1000.sql  select_list_10000.sql
pg-sql/src/: formatter.rs  harness.rs  lib.rs  main.rs  printer.rs  rules.rs  tokens.rs
pg-sql/src/ast/: analyze.rs  common.rs  create_function.rs  create_index.rs  create_procedure.rs  create_table.rs  create_tablespace.rs  create_view.rs  delete.rs  drop_table.rs  explain.rs  expr.rs  insert.rs  merge.rs  mod.rs  partition.rs  select.rs  set_reset.rs  simple_stmts.rs  update.rs  values.rs  with_clause.rs
recursa-core/: Cargo.toml  README.md
recursa-core/src/: error.rs  fmt.rs  input.rs  lib.rs  macros.rs  parse.rs  rules.rs  scan.rs  seq.rs  surrounded.rs  visitor.rs
recursa-derive/: CHANGELOG.md  Cargo.toml  README.md
recursa-derive/src/: format_tokens_derive.rs  lib.rs  parse_derive.rs  scan_derive.rs  total_visitor_derive.rs  visit_derive.rs
recursa-derive/tests/: parse_enum.rs  parse_lookahead.rs  parse_pratt.rs  parse_struct.rs  scan_enum.rs  scan_tuple_struct.rs  scan_unit_struct.rs  seq_parse.rs  visit.rs
recursa-diagram/: Cargo.toml
recursa-diagram-core/: Cargo.toml
recursa-diagram-core/src/: layout.rs  lib.rs  svg.rs
recursa-diagram-core/tests/: layout_geometry.rs  svg_basic.rs  svg_snapshot.rs
recursa-diagram-macros/: Cargo.toml
recursa-diagram-macros/src/: lib.rs  macro_impl.rs
recursa-diagram-macros/tests/: macro_tests.rs
recursa-diagram-macros/tests/trybuild/: conflict.rs  conflict.stderr  struct_sequence.rs  unit_terminal.rs
recursa-diagram/src/: layout.rs  lib.rs  svg.rs
recursa-diagram/tests/: facade_smoke.rs  layout_geometry.rs  svg_basic.rs  svg_snapshot.rs
src/: lib.rs
tests/: bulk_macros.rs  container_types.rs  integration.rs  mini_language.rs  visitor.rs
