[workspace]
members = ["recursa-core", "recursa-derive", "."]
resolver = "3"

[package]
name = "recursa"
version = "0.1.0"
edition = "2024"

[dependencies]
recursa-core = { path = "recursa-core" }
recursa-derive = { path = "recursa-derive" }
regex = "1"
miette = { version = "7", features = ["fancy"] }
