[workspace]
members = ["recursa-core", "recursa-derive", "recursa-diagram-macros", "recursa-diagram", "pg-sql", "."]
resolver = "3"

[package]
name = "recursa"
version = "0.1.0"
edition = "2024"
description = "Derive recursive descent parsers from Rust types"
license = "MIT"
repository = "https://github.com/freshtonic/recursa"
readme = "README.md"

[dependencies]
recursa-core = { path = "recursa-core" }
recursa-derive = { path = "recursa-derive" }
regex = "1"
miette = { version = "7", features = ["fancy"] }
