[package]
name = "pg-sql"
version = "0.1.0"
edition = "2024"
description = "PostgreSQL SQL parser built with recursa"
license = "MIT"
publish = false

[dependencies]
recursa = { path = ".." }
recursa-core = { path = "../recursa-core" }
recursa-derive = { path = "../recursa-derive" }
regex = "1"

[dev-dependencies]
testcontainers = { version = "0.27", features = ["blocking"] }
testcontainers-modules = { version = "0.15", features = ["postgres"] }
