[package]
name = "pg-sql"
version = "0.1.0"
edition = "2024"
description = "PostgreSQL SQL parser built with recursa"
license = "MIT"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
recursa = { path = ".." }
recursa-core = { path = "../recursa-core" }
recursa-derive = { path = "../recursa-derive" }
recursa-diagram = { path = "../recursa-diagram" }
regex = "1"

[dev-dependencies]
testcontainers = { version = "0.27", features = ["blocking"] }
testcontainers-modules = { version = "0.15", features = ["postgres"] }
criterion = { version = "0.5", features = ["html_reports"] }
sqlparser = "0.52"

[[bin]]
name = "gen-stress"
path = "src/bin/gen_stress.rs"

[[bench]]
name = "parse"
harness = false
