[package]
name = "recursa-derive"
version = "0.1.0"
edition = "2024"
description = "Derive macros for the recursa parser framework"
license = "MIT"
repository = "https://github.com/freshtonic/recursa"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
recursa-core = { path = "../recursa-core" }
regex = "1"
