[package]
name = "recursa-diagram-macros"
version = "0.1.0"
edition = "2024"
description = "Proc-macro attribute for recursa-diagram railroad diagrams"
license = "MIT"
repository = "https://github.com/freshtonic/recursa"

[lib]
proc-macro = true

[dependencies]
recursa-diagram-core = { path = "../recursa-diagram-core" }
