[package]
name = "recursa-diagram"
version = "0.1.0"
edition = "2024"
description = "Railroad syntax diagrams for recursa-derived AST types"
license = "MIT"
repository = "https://github.com/freshtonic/recursa"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
trybuild = "1"
